@@ -66,7 +66,12 @@ void util::BlueprintNodeBuilder::End()
                 HeaderMin - ImVec2(8 - halfBorderWidth, 4 - halfBorderWidth),
                 HeaderMax + ImVec2(8 - halfBorderWidth, 0),
                 ImVec2(0.0f, 0.0f), uv,
+#if IMGUI_VERSION_NUM > 18101
+                headerColor, GetStyle().NodeRounding, ImDrawFlags_RoundCornersTop);
+#else
                 headerColor, GetStyle().NodeRounding, 1 | 2);
+#endif
+
 
             auto headerSeparatorMin = ImVec2(HeaderMin.x, HeaderMax.y);
             auto headerSeparatorMax = ImVec2(HeaderMax.x, HeaderMin.y);
